--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: gorestream
     restart: unless-stopped
     ports:
-      - "8080:80"
+      - "${PORT:-8080}:80"
     volumes:
       - /dev/shm:/dev/shm
     tmpfs:
@@ -24,7 +24,7 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2G
+          memory: 700M
         reservations:
           memory: 256M
     labels:
