feat: dynamic API_PORT in nginx.conf via envsubst

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
 
         # 1. API e Controle (Raiz)
         location / {
-            proxy_pass http://127.0.0.1:8080;
+            proxy_pass http://127.0.0.1:${API_PORT};
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
