--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: gorestream
     restart: unless-stopped
     ports:
-      - "${PORT:-8080}:80"
+      - "${PORT:-8080}:${PORT:-8080}"
     volumes:
       - /dev/shm:/dev/shm
     tmpfs:
@@ -17,7 +17,7 @@ services:
       - TZ=America/Sao_Paulo
       - PORT=${PORT:-8080}
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${PORT:-8080}/"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -31,7 +31,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.gorestream.entrypoints=web,websecure"
-      - "traefik.http.services.gorestream.loadbalancer.server.port=80"
+      - "traefik.http.services.gorestream.loadbalancer.server.port=${PORT:-8080}"
 
 networks:
   default:
