--- a/nginx.conf
+++ b/nginx.conf
@@ -11,12 +11,12 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80;
+        listen ${API_PORT};
         server_name localhost;
 
         # 1. API e Controle (Raiz)
         location / {
-            proxy_pass http://127.0.0.1:${API_PORT};
+            proxy_pass http://127.0.0.1:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
