--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen ${API_PORT};
+        listen 80;
         server_name localhost;
 
         # 1. API e Controle (Raiz)
